Fix pagination z-index so search results can overlay it

--- a/app/assets/stylesheets/pages/search/_search_page.scss
+++ b/app/assets/stylesheets/pages/search/_search_page.scss
@@ -59,7 +59,7 @@ body {
         width: 100%;
         display: block;
         text-align: center;
-        z-index: 999;
+        z-index: 2;
         background: white;
       }
       @include media-breakpoint-up(sm) {
